[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/GameOver.gd" type="Script" id=1]
[ext_resource path="res://asset/gameOverBackground.jpg" type="Texture" id=2]
[ext_resource path="res://asset/gameover.png" type="Texture" id=3]
[ext_resource path="res://menus/theme.tres" type="Theme" id=4]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4, -2 )
scale = Vector2( 2.02148, 1.57031 )
z_index = -1
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 515, 166 )
scale = Vector2( 0.509368, 0.464286 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = 70.0
margin_right = 37.5
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Your score:"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 102.0
margin_bottom = 14.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 102.0
margin_bottom = 34.0
focus_neighbour_top = NodePath("../ButtonQuit")
focus_neighbour_bottom = NodePath("../ButtonBackToMenue")
theme = ExtResource( 4 )
text = "Resume"

[node name="ButtonBackToMenue" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 102.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../ButtonResume")
focus_neighbour_bottom = NodePath("../ButtonQuit")
theme = ExtResource( 4 )
text = "Back to menu "

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 102.0
margin_bottom = 74.0
focus_neighbour_top = NodePath("../ButtonBackToMenue")
focus_neighbour_bottom = NodePath("../ButtonResume")
theme = ExtResource( 4 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ButtonResume" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonBackToMenue" to="." method="_on_ButtonBackToMenue_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
